tests/transpiler/x/fortran/basic_compare.error
exit status 2
7
At line 6 of file /workspace/mochi/tests/transpiler/x/fortran/basic_compare.f90 (unit = 6, file = 'stdout')
Fortran runtime error: Expected INTEGER for item 1 in formatted transfer, got LOGICAL
(I0)
 ^

Error termination. Backtrace:
#0  0x7f12c6d9be59 in ???
#1  0x7f12c6d9ca71 in ???
#2  0x7f12c702455e in ???
#3  0x7f12c7032566 in ???
#4  0x7f12c7036592 in ???
#5  0x55d7caeb5295 in MAIN__
#6  0x55d7caeb5370 in main
