tests/transpiler/x/fortran/basic_compare.f90
! Generated by Mochi transpiler v0.10.31
program main
  implicit none
  integer :: a = (10 - 3)
  integer :: b = (2 + 2)
  print '(I0)', a
  if ((a == 7)) then
    print *, 'true'
  else
    print *, 'false'
  end if
  if ((b < 5)) then
    print *, 'true'
  else
    print *, 'false'
  end if
end program main
